@@ -837,6 +837,7 @@ don't hesitate to contact me.
 (setopt transient-select-menu-window t)
 (setopt transient-force-single-column t)
 (setopt transient-navigate-to-group-descriptions t)
+(setopt transient-describe-menu t)
 @end lisp
 
 Additionally you have allow the command, which you use to read the
@@ -873,6 +874,18 @@ default, @kbd{@key{UP}} and @kbd{@key{DOWN}} move from suffix to suffix.  When t
 is non-@code{nil} as well, then they additionally stop at group descriptions.
 This is useful because it allows braille and audio devices to output
 the group title at point.
+@end defopt
+
+@defopt transient-describe-menu
+This option controls whether short description is inserted at the
+beginning of the menu buffer.
+
+When this is non-@code{nil}, then the menu buffer begins with a short
+description.  Ideally this is a string written exactly for that
+purpose, but because this is a new feature, most menu commands
+do not provide that yet.  In that case the first line of its
+docstring is used as fallback.  If the value is @code{docstring},
+then the docstring is used even if a description is available.
 @end defopt
 
 @anchor{Auxiliary Options}
@@ -2799,6 +2812,12 @@ fallback descriptions for suffixes that lack a description.  This
 is intended to be temporarily used when implementing of a new prefix
 command, at which time @code{transient-command-summary-or-name} is a useful
 value.
+
+@item
+@code{description} a short string describing the prefix, which users can
+opt-in to be displayed at the top of the menu buffer.  This should
+be more concise than the first line of the docstring, which is used
+as a fallback if no description is provided.
 @end itemize
 
 @anchor{Internal}
