@@ -529,6 +529,21 @@ text and might otherwise have to scroll in two dimensions."
   :group 'transient
   :type 'boolean)
 
+(defcustom transient-describe-menu nil
+  "Whether to begin the menu buffer with a very short description.
+
+When this is non-nil, then the menu buffer begins with a short
+description.  Ideally this is a string written exactly for that
+purpose, but because this is a new feature, most menu commands
+do not provide that yet.  In that case the first line of its
+docstring is used as fallback.  If the value is `docstring',
+then the docstring is used even if a description is available."
+  :package-version '(transient . "0.13.0")
+  :group 'transient
+  :type '(choice (const :tag "Insert description" t)
+                 (const :tag "Insert docstring summary" docstring)
+                 (const :tag "Do not insert description" nil)))
+
 (defconst transient--max-level 7)
 (defconst transient--default-child-level 1)
 (defconst transient--default-prefix-level 4)
@@ -827,6 +842,7 @@ If `transient-save-history' is nil, then do nothing."
    (history     :initarg :history     :initform nil)
    (history-pos :initarg :history-pos :initform 0)
    (history-key :initarg :history-key :initform nil)
+   (description :initarg :description :initform nil)
    (show-help   :initarg :show-help   :initform nil)
    (info-manual :initarg :info-manual :initform nil)
    (man-page    :initarg :man-page    :initform nil)
@@ -4557,6 +4573,21 @@ have a history of their own.")
     (setq display-line-numbers nil)
     (setq show-trailing-whitespace nil)
     (run-hooks 'transient-setup-buffer-hook))
+  (when transient-describe-menu
+    (let* ((command (oref transient--prefix command))
+           (desc (propertize
+                  (or (and (not (eq transient-describe-menu 'docstring))
+                           (oref transient--prefix description))
+                      (and$ (documentation command)
+                            (car (split-string $ "\n")))
+                      (symbol-name command))
+                  'face 'transient-heading)))
+      (when (string-suffix-p "." desc)
+        (setq desc (substring desc 0 -1)))
+      (insert (if transient-navigate-to-group-descriptions
+                  (make-text-button desc nil)
+                desc))
+      (insert "\n\n")))
   (transient--insert-groups)
   (when (or transient--helpp transient--editp)
     (transient--insert-help))
